Remove usage of register keyword

It serves no purpose and is invalid C++17

BUG: 454050